fix: sections are in main .oe-home, removing > so that spacing works as intended

--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -1,5 +1,5 @@
 /*----- Sections -----*/
-body > section {
+body section {
     padding-top: var(--oe-padding-large);
     padding-bottom: var(--oe-padding-large);
 }
